# crafting-interpreters

./: README.md
introduction/c-linked-list/: CMakeLists.txt  run.sh
introduction/c-linked-list/src/: LinkedList.h  linked_list.c  linked_list.h  main.c
introduction/java-helloworld/: settings.gradle.kts
